--- a/aise-hi/project1/style.css
+++ b/aise-hi/project1/style.css
@@ -2,12 +2,17 @@
     margin: 0;
     padding: 0;
 }
+body{
+    background-color: aliceblue;
+}
+
 
 /* ---------------------------navbar------------------ */
 .navbar{
     display: flex;
     justify-content: space-between;
     align-items: center;
+
     padding: 2% 9.5%;
     background-color: #333;
 }
@@ -40,18 +45,17 @@
 
 /* ---------------------------main-------------------- */
 
-.main{
+.main, .course{
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 5% 10%;
-background-color: aliceblue;}
-
-.main-text{
+}
+.main-text, .text{
     width: 50%;
 }
 
-.main-text h1{
+.heading{
     font-size: 3rem;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: rgba(0, 119, 255, 0.774);
@@ -68,12 +72,12 @@ background-color: aliceblue;}
 }
 
 .btn{
-    padding: 2% 4%;
+    padding: 3% 4%;
     margin-right: 3%;
     border: none;
     font-size: 1rem;
     border-radius: 5px;
-    transition: all  0.3s;
+    transition: all ease-in-out 0.09s;
 }
 
 .btn:hover{
@@ -97,4 +101,54 @@ background-color: aliceblue;}
 .action-btn:hover{
     background-color: rgba(40, 35, 35, 0.819);
 
+}
+
+
+hr{
+    border-top: 10px dotted;
+    width: 10%;
+    margin: 20px auto;
+    color: rgba(51, 51, 51, 0.524);
+}
+
+
+/* ----------------courses section---------------------------- */
+
+.courses{
+    padding: 5% 0;
+    /* background-color: #64c4f7a5; */
+}
+.course img{
+    width: 80%;
+    border-radius: 10px;
+    transition: all ease-in-out 0.09s;
+
+}
+.course img:hover{
+   transform: scale(1.1);
+}
+
+.course button{
+    background-color: #333;
+    color: white;
+}
+.course button:hover{
+    background-color: rgba(40, 35, 35, 0.819);
+}
+.course p{
+    padding: 2rem 0;
+    opacity: 0.8;
+}
+
+.course h1{
+    font-size: 2rem;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+}
+.courses > h1{
+    text-align: center;
+    margin: 20px 0;
+}
+.right-main{
+    text-align: right;
 }
