--- a/aise-hi/project1/styles.css
+++ b/aise-hi/project1/styles.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 :root{
@@ -9,14 +10,20 @@
 }
 
 body{
-    background-color: var(--bgcolor);
+    background-image:url("https://www.transparenttextures.com/patterns/az-subtle.png"), linear-gradient(180deg, #EFFFFD, #B8FFF9, #85F4FF, #42C2FF);
     font-family: var(--font);
     line-height: 1.5;
 }
 
+.f-r{
+    float: right;
+}
+
 .heading{
     font-size: 2.5rem;
-    text-shadow: 1px 1px 1px #3a3c3c;
+    margin-bottom: 10%;
+    font-weight: bold;
+    text-shadow: 2px 2px 2px #85F4FF;
 }
 .flexbox{
     display: flex;
@@ -53,6 +60,7 @@ body{
 .navbar{
     background-color: #3a3c3c;
     padding: 1.5% 10%;
+    align-items: flex-end;
 }
 
 .logo{
@@ -61,6 +69,9 @@ body{
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 2rem;
    font-weight: bolder;
+}
+.navbar-links ul{
+    margin-bottom: .5rem;
 }
 .navbar-links li{
     list-style: none;
@@ -80,13 +91,13 @@ body{
 
 /* ---------------main section------------------- */
 
-.main{
-    background-image: url("https://www.transparenttextures.com/patterns/az-subtle.png");
-}
 .main-text h1{
     color: #2fa0f9;
+    margin-bottom: 8%;
 }
-
+.main-text .btn{
+    margin-top: 1.3rem;
+}
 .main-text .infobtn{
     background-color: #2fa0f9;
     color: white
@@ -98,9 +109,6 @@ body{
 
 /* ------------------courses section -------------------------- */
 .course-ka-section{
-    /* background:  */
-    background-image:url("https://www.transparenttextures.com/patterns/az-subtle.png"), linear-gradient(180deg, #EFFFFD, #85F4FF);
-
     color: #3a3c3c;
 }
 
@@ -122,10 +130,12 @@ body{
 }
 .course h1{
     font-size: 1.5rem;
+    color: #303131;
+    font-weight: bold;
 }
 .course button{
-    background-color: #3a3c3c;
-    color: #EFFFFD;
+    background-color: #3a3c3c !important;
+    color: #EFFFFD !important;
 }
 .course img{
     width: 90%;
@@ -139,4 +149,90 @@ body{
 }
 .js-img{
    text-align: right;
+}
+
+
+/* testimonials section */
+
+.testimonials{
+    padding: 10% 10%;
+    padding-bottom: 3%;
+    text-align: center;
+    color: #3a3c3c;
+}
+.carousel-btn{
+    filter: invert(100%);
+}
+
+.user-image{
+    border-radius: 50%;
+}
+
+/* -----------feedback section ----------------------- */
+.last{
+    padding-bottom: 10%;
+}
+.last h1{
+    width: 100%;
+    margin-bottom: 3rem;
+    text-align: center;
+}
+
+.feedbacks{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1.5rem;
+}
+.feedback{
+    padding: 1.5rem;
+    border-radius: 15px;
+    border: 1px solid #434343;
+    transition: all ease-in 0.08s;
+    
+}
+.feedback:hover{
+    transform: scale(1.07);
+}
+.feedback h3{
+    font-weight: bold;
+    margin-bottom: 1rem;
+}
+.feedback p{
+    opacity: 0.9;
+}
+.feedback1{
+    background-color: #EFFFFD;
+}
+.feedback2{
+    grid-column: span 2;
+    background-color: #2fa0f9;
+    color: white;
+}
+.feedback3{
+    grid-row: span 3;
+    background-color: #303131;
+    color: white;
+}
+.feedback4{
+    grid-column: span 2;
+    background-color: #85F4FF;
+}
+.feedback5{
+    grid-row: span 2;
+    background-color: #EFFFFD;
+}
+.feedback6{
+    grid-column: span 2;
+    background-color: #a2d6ee;
+}
+
+
+/* footer */
+
+footer{
+    text-align: center;
+    background-color: #3a3c3c;
+    color: white;
+    padding: 2rem;
+    word-spacing: .5rem;
 }
