--- a/js-projects/advance-projects/meals/style.css
+++ b/js-projects/advance-projects/meals/style.css
@@ -2,15 +2,16 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body{
-    max-width: 65rem;
     margin: auto;
     font-family: 'Poppins', sans-serif;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    
 }
 
 /* utilities classes -------------------------- */
@@ -28,54 +29,80 @@ nav{
     padding: 1.5em;
 }
 
-.search{
+.logo{
     text-align: center;
-}
-.search input{
-    padding: .5em 1em;
-    width: 80%;
-    border: none;
-    border-radius: 50px;
-    margin: .5em;
-    box-shadow: 1px 1px 5px rgba(167, 162, 162, 0.8);
+    margin-bottom: 1em;
 }
 
-.search button{
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    border: none;
-    background-color: aliceblue;
-    cursor: pointer;
-}
-.search button:hover{
-    background-color: rgb(232, 232, 232);
+.logo-text{
+    font-size: 1.5rem;
+    font-weight: 900;
+    text-decoration: aliceblue wavy underline;
 }
 
 .selections{
     display: flex;
     justify-content: space-between;
-    margin-top: .5em;
+    margin: .5em auto 0;
+    max-width: 30rem;
 }
 .selections p i{
     margin-left: .3em;
 }
 
+@media (min-width: 800px){
+    nav{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 1.5em 4em;
+    }
 
+    .logo{
+        margin: 0;
+    }
+
+    .selections{
+        margin: 0;
+    }
+
+    .selections p{
+        margin-left: 4em;
+    }
+}
 
 
 /* main ----------------------------- */
 main{
     padding: 1.5em;
 }
-
+.meals{
+    max-width: 73rem;
+}
 .meal{
     background-color: rgba(247, 251, 255, 0.915);
     padding: .7em;
     border-radius: 5px;
     box-shadow: 1px 1px 7px rgba(207, 206, 206, 0.8);
-    margin: 1em 0;
+    margin: 1.5em 0;
 }
+
+@media (min-width: 500px){
+    .meals{
+        display: flex;
+        flex-wrap: wrap;
+        max-width: 70rem;
+        justify-content: center;
+        margin: 2em auto;
+    }
+    .meal{
+        flex: 1 1 350px;
+        margin: 1em .7em;
+        max-width: 500px;
+    }
+}
+
+
 
 /* meal image section ------------------------ */
 
@@ -83,7 +110,7 @@ main{
     width: 40%;   
     margin: auto;
 }
-.image img{
+.meal .image img{
     width: 100%;
     border-radius: 50%;
     border: 3px solid red;
@@ -104,10 +131,127 @@ main{
     background-color: transparent;
     font-size: 1.1rem;
     color: red;
+    cursor: pointer;
+    width: 10%
 }
 
 .meal .text .instructions{
     color: gray;
+}
+
+.meal .text .showDetails{
+    border: none;
+    border-radius: 5px;
+    background-color: red;
+    color: aliceblue;
+    padding: .5em 1em;
+    margin-top: 1em;
+    cursor: pointer;
+}
+
+
+/* pop-up --------------------------------- */
+
+.pop-up{
+    position: fixed;
+    inset: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 1.3em;
+    display: none;
+}
+
+.pop-up-main{
+    background-color: aliceblue;
+    border-radius: 10px;
+    padding: 1.5em;
+    padding-bottom: .5em;
+    max-height: 90vh;
+    overflow-y: auto;
+    position: relative;
+    max-width: 700px;
+    
+    transform: translateY(100px);
+    opacity: 0;
+    transition: transform 0.3s , opacity 0.3s;
+}
+
+.active{
+    transform: translateY(0);
+    opacity: 1;
+}
+
+/* pop-up-image------------------------------ */
+
+.pop-up-main .image{
+    margin: 3em 0 1.5em;
+    width: 100%;
+}
+
+.pop-up-main .image img{
+    width: 100%;
+    border-radius: 20px;
+    border: 2px solid red;
+    
+    max-width: max-content;
+    max-height: 300px;
+    object-fit: contain;
+}
+
+/* pop-up-text------------------------- */
+
+.pop-up-main > *{
+    margin-bottom: .7em;
+}
+.pop-up-main .country{
+    color: red;
+}
+
+
+.pop-up-main .ingredients-text{
+    margin-left: .5em;
+    color: gray;
+}
+.pop-up-main .instructions-text{
+    color: gray;
+    margin-left: .5em;
+}
+
+/* poop-up-buttons-------------------------------- */
+
+.pop-up-main .buttons{
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+
+    padding: .5em 1em;
+    justify-content: space-between;
+    
+}
+
+.pop-up-main .buttons button{
+    border: none;
+    font-size: 1.3rem;
+    cursor: pointer;
+    color: red;
+}
+
+.pop-up-main .buttons button.cross{
+    color: aliceblue;
+    background-color: red;
+    width: 20px;
+    height: 20px;
+    font-size: .7rem;
+    font-weight: bold;
+    border-radius: 50%;
+}
+
+.pop-up-main .goToTopCard{
+    font-size: 2.5rem;
+    color: red;
+    margin-left: 90%;
+    display: block;
 }
 
 
