--- a/js-projects/intermediate-projects/ichu-bday/style.css
+++ b/js-projects/intermediate-projects/ichu-bday/style.css
@@ -53,6 +53,12 @@ button.hack{
     box-shadow: 1px 2px 10px rgba(137, 250, 24, 0.865);  
     transition: transform 0.3s, box-shadow 0.2s;
 }
+@media (max-width: 500px) {
+    button.hack{
+        padding: .5em;
+        font-size: 1.5rem;
+    }
+}
 
 button.hack:hover{
     transform: rotate(0deg);
@@ -123,6 +129,16 @@ button.hack:hover{
     font-size: 5rem;
     font-family: 'Press Start 2P', cursive;
     animation: text 0.5s infinite;    
+}
+
+@media (max-width: 500px) {
+    .images img{
+        object-fit: contain;
+    }
+
+    .images .overlay p{
+        font-size: 3rem;
+    }
 }
 
 @keyframes text{
