--- a/js-projects/advance-projects/meals/style.css
+++ b/js-projects/advance-projects/meals/style.css
@@ -166,15 +166,50 @@ nav .expandNavBtn span:last-child{
 }
 
 
+/* template loading ----------------------------------- */
+
+.card{
+    animation: template-animation 1s infinite alternate;
+}
+
+.card .image{
+    width: 130px;
+    height: 130px;
+    background-color: rgba(128, 128, 128, 0.499);
+    border-radius: 50%;
+    margin: 0 auto 2em;
+}
+
+.card p{
+    background-color: rgba(128, 128, 128, 0.6);
+    height: 20px;
+    margin: 1em;
+}
+.card p:first-child{
+    width: 70%;
+}
+
+@keyframes template-animation{
+    0%{
+        opacity: 1;
+    } 
+    50%{
+        opacity: 0.5;
+    }
+    100%{
+        opacity: 0;
+    }
+}
+
 /* main ----------------------------- */
 main{
     padding: 1.5em;
 }
-.meals, .bookmarkedMeals, .accToListMeals{
+.template, .meals, .bookmarkedMeals, .accToListMeals{
     max-width: 73rem;
     flex-direction: column;    /* because we are adding display flex in js when rendering this so here w can do flex direction column */
 }
-.meal{
+.card, .meal{
     background-color: rgba(247, 251, 255, 0.915);
     padding: .7em;
     border-radius: 5px;
@@ -183,7 +218,7 @@ main{
 }
 
 @media (min-width: 550px){
-    .meals, .bookmarkedMeals, .accToListMeals{
+    .template, .meals, .bookmarkedMeals, .accToListMeals{
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
@@ -191,7 +226,7 @@ main{
         justify-content: center;
         margin: 2em auto;
     }
-    .meal{
+    .card, .meal{
         flex: 1 1 350px;
         margin: 1em .7em;
         max-width: 500px;
