--- a/js-projects/advance-projects/meals/style.css
+++ b/js-projects/advance-projects/meals/style.css
@@ -291,6 +291,26 @@ main{
     max-height: 2.2em;
 }
 
+/* next pages ------------------ */
+.next-pages{
+    width: 100%;
+}
+
+.next-pages li{
+    list-style-type: none;
+    background-color: red;
+    color: aliceblue;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    margin: 1em;
+    cursor: pointer;
+}
+
+.next-pages li:hover{
+    background-color: rgba(244, 19, 19, 0.851);
+}
+
 
 /* pop-up --------------------------------- */
 
