--- a/js-projects/advance-projects/moviess/styles/main.css
+++ b/js-projects/advance-projects/moviess/styles/main.css
@@ -12,12 +12,27 @@
     --secondary-color: #969bac;
 }
 
+/*  scrollbar ------------------------------- */
+
+::-webkit-scrollbar{
+    width: 5px;
+}
+
+::-webkit-scrollbar-track{
+    background-color: var(--secondary-bg-color);
+}
+::-webkit-scrollbar-thumb{
+    background-color: var(--primary-color);
+    border-radius: 10px;
+}
+
 body{
     min-height: 200vh;
     background-color: var(--primary-bg-color);
 
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
 }
 
 /* utility classes --------------------------------- */
@@ -29,7 +44,7 @@ body{
 }
 
 .container{
-    max-width: 65rem;
+    max-width: 73rem;
     margin: auto;
 }
 
@@ -60,7 +75,7 @@ body{
 
 
 
-            /* expand btn ---------------------------------- */
+        /* expand btn ---------------------------------- */
 
 .expand-btn{
     flex-direction: column;
@@ -76,7 +91,7 @@ body{
     margin-bottom: .3em;
 }
 
-            /* nav links ---------------------------------------*/
+        /* nav links ---------------------------------------*/
 
 .nav-links-div{
     display: none;
@@ -132,12 +147,79 @@ body{
 }
 
 
+/* slider --------------------------------------- */
+
+.slider{
+    width: 100vw;
+    height: 60vh;
+    margin-bottom: 2em;
+    min-height: 400px;
+    background-size: cover;
+    transition: background-image 1s;
+    position: relative;
+}
+
+.slider .slider-overlay{
+    position: absolute;
+    inset: 0;
+    background-color: rgba(10, 40, 116, 0.721);
+    display: flex;
+    align-items: flex-end;
+}
+
+.slider form{
+    margin: 0 auto;
+    margin-bottom: 2em;
+    width: 80%;
+    align-items: stretch;
+}
+
+.slider form input{
+    width: 100%;
+    font-size: 1.1rem;
+    padding: .5em 1em;
+    border: none;
+    color: var(--primary-bg-color);
+    background-color: var(--primary-color);
+    border-radius: 50px;
+}
+
+.slider form input:focus{
+    outline: none;
+}
+
+.slider form button{
+    width: 50px;
+    height: 50px;
+    margin-left: -50px;
+    border: none;
+    font-size: 1.5rem;
+    color: var(--primary-bg-color);
+    background-color: var(--primary-color);
+    border-radius: 50%;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.slider form button:hover{
+    background-color: #b2b8cacd;
+}
+
+
+
 /* main part --------------------------------------------- */
 
 main{
-    margin: 2em auto;
+    margin: auto;
     text-align: center;
 }
+
+.page-title{
+    color: var(--primary-color);
+    word-spacing: .3em;
+}
+
+
 
 section h2{
     color: var(--primary-color);
@@ -147,21 +229,23 @@ section h2{
 section h2::after{
     content: '';
     left: 0;
+    right: 0;
+    z-index: -2;
     top: calc(50% - 3px);
     position: absolute;
-    height: 3px;
-    width: 40%;
+    height: 2px;
+    width: 100%;
     background-color: var(--secondary-color);
 }
 
 section h2::before{
     content: '';
-    right: 0;
-    top: calc(50% - 3px);
+    right: calc(50% - 75px);
     position: absolute;
-    height: 3px;
-    width: 40%;
-    background-color: var(--secondary-color);
+    height: 100%;
+    width: 150px;
+    background-color: var(--primary-bg-color);
+    z-index: -1;
 }
 
 .cards{
@@ -180,6 +264,8 @@ section h2::before{
 .card img{
     border-radius: 10px;
     width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .card .overlay{
