--- a/js-projects/advance-projects/moviess/styles/main.css
+++ b/js-projects/advance-projects/moviess/styles/main.css
@@ -3,6 +3,7 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    scroll-behavior: smooth;
 }
 
 :root{
@@ -27,7 +28,7 @@
 }
 
 body{
-    min-height: 200vh;
+    min-height: 100vh;
     background-color: var(--primary-bg-color);
 
     display: flex;
@@ -67,6 +68,7 @@ body{
 
 #navbar .logo{
     font-family: 'Rubik Distressed', cursive;
+    cursor: pointer;
 }
 
 #navbar .logo i{
@@ -152,11 +154,15 @@ body{
 .slider{
     width: 100vw;
     height: 60vh;
-    margin-bottom: 2em;
     min-height: 400px;
     background-size: cover;
-    transition: background-image 3s;
+    transition: background-image 2s;
+    background-position: center center;
     position: relative;
+}
+
+.slider-animation{
+    opacity: 0;
 }
 
 .slider .slider-overlay{
@@ -210,27 +216,25 @@ body{
 /* main part --------------------------------------------- */
 
 main{
-    margin: auto;
     text-align: center;
+}
+
+
+section{
+    margin: 0 auto 5em;
 }
 
 .page-title{
     color: var(--primary-color);
-    word-spacing: .3em;
-}
-
-
-
-section h2{
-    color: var(--primary-color);
     position: relative;
+    margin: 2em 0;
 }
 
-section h2::after{
+.page-title::after{
     content: '';
     left: 0;
     right: 0;
-    z-index: -2;
+    z-index: -1;
     top: calc(50% - 3px);
     position: absolute;
     height: 2px;
@@ -238,14 +242,9 @@ section h2::after{
     background-color: var(--secondary-color);
 }
 
-section h2::before{
-    content: '';
-    right: calc(50% - 75px);
-    position: absolute;
-    height: 100%;
-    width: 150px;
+.page-title-text{
     background-color: var(--primary-bg-color);
-    z-index: -1;
+    padding: 0 1em;
 }
 
 .cards{
